@@ -1,6 +1,6 @@
 /* Python interface to symbols.
 
-   Copyright (C) 2008-2013 Free Software Foundation, Inc.
+   Copyright (C) 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 
    This file is part of GDB.
 
@@ -63,22 +63,6 @@ sympy_str (PyObject *self)
   result = PyString_FromString (SYMBOL_PRINT_NAME (symbol));
 
   return result;
-}
-
-static PyObject *
-sympy_get_type (PyObject *self, void *closure)
-{
-  struct symbol *symbol = NULL;
-
-  SYMPY_REQUIRE_VALID (self, symbol);
-
-  if (SYMBOL_TYPE (symbol) == NULL)
-    {
-      Py_INCREF (Py_None);
-      return Py_None;
-    }
-
-  return type_to_type_object (SYMBOL_TYPE (symbol));
 }
 
 static PyObject *
@@ -183,42 +167,6 @@ sympy_is_variable (PyObject *self, void *closure)
 			      || class == LOC_OPTIMIZED_OUT));
 }
 
-/* Implementation of gdb.Symbol.needs_frame -> Boolean.
-   Returns true iff the symbol needs a frame for evaluation.  */
-
-static PyObject *
-sympy_needs_frame (PyObject *self, void *closure)
-{
-  struct symbol *symbol = NULL;
-  volatile struct gdb_exception except;
-  int result = 0;
-
-  SYMPY_REQUIRE_VALID (self, symbol);
-
-  TRY_CATCH (except, RETURN_MASK_ALL)
-    {
-      result = symbol_read_needs_frame (symbol);
-    }
-  GDB_PY_HANDLE_EXCEPTION (except);
-
-  if (result)
-    Py_RETURN_TRUE;
-  Py_RETURN_FALSE;
-}
-
-/* Implementation of gdb.Symbol.line -> int.
-   Returns the line number at which the symbol was defined.  */
-
-static PyObject *
-sympy_line (PyObject *self, void *closure)
-{
-  struct symbol *symbol = NULL;
-
-  SYMPY_REQUIRE_VALID (self, symbol);
-
-  return PyInt_FromLong (SYMBOL_LINE (symbol));
-}
-
 /* Implementation of gdb.Symbol.is_valid (self) -> Boolean.
    Returns True if this Symbol still exists in GDB.  */
 
@@ -232,53 +180,6 @@ sympy_is_valid (PyObject *self, PyObject *args)
     Py_RETURN_FALSE;
 
   Py_RETURN_TRUE;
-}
-
-/* Implementation of gdb.Symbol.value (self[, frame]) -> gdb.Value.  Returns
-   the value of the symbol, or an error in various circumstances.  */
-
-static PyObject *
-sympy_value (PyObject *self, PyObject *args)
-{
-  struct symbol *symbol = NULL;
-  struct frame_info *frame_info = NULL;
-  PyObject *frame_obj = NULL;
-  struct value *value = NULL;
-  volatile struct gdb_exception except;
-
-  if (!PyArg_ParseTuple (args, "|O", &frame_obj))
-    return NULL;
-
-  if (frame_obj != NULL && !PyObject_TypeCheck (frame_obj, &frame_object_type))
-    {
-      PyErr_SetString (PyExc_TypeError, "argument is not a frame");
-      return NULL;
-    }
-
-  SYMPY_REQUIRE_VALID (self, symbol);
-  if (SYMBOL_CLASS (symbol) == LOC_TYPEDEF)
-    {
-      PyErr_SetString (PyExc_TypeError, "cannot get the value of a typedef");
-      return NULL;
-    }
-
-  TRY_CATCH (except, RETURN_MASK_ALL)
-    {
-      if (frame_obj != NULL)
-	{
-	  frame_info = frame_object_to_frame_info (frame_obj);
-	  if (frame_info == NULL)
-	    error (_("invalid frame"));
-	}
-      
-      if (symbol_read_needs_frame (symbol) && frame_info == NULL)
-	error (_("symbol requires a frame to compute its value"));
-
-      value = read_var_value (symbol, frame_info);
-    }
-  GDB_PY_HANDLE_EXCEPTION (except);
-
-  return value_to_value_object (value);
 }
 
 /* Given a symbol, and a symbol_object that has previously been
@@ -335,7 +236,7 @@ sympy_dealloc (PyObject *obj)
 
   if (sym_obj->prev)
     sym_obj->prev->next = sym_obj->next;
-  else if (sym_obj->symbol && SYMBOL_SYMTAB (sym_obj->symbol))
+  else if (SYMBOL_SYMTAB (sym_obj->symbol))
     {
       set_objfile_data (SYMBOL_SYMTAB (sym_obj->symbol)->objfile,
 			sympy_objfile_data_key, sym_obj->next);
@@ -354,14 +255,12 @@ sympy_dealloc (PyObject *obj)
 PyObject *
 gdbpy_lookup_symbol (PyObject *self, PyObject *args, PyObject *kw)
 {
-  int domain = VAR_DOMAIN;
-  struct field_of_this_result is_a_field_of_this;
+  int domain = VAR_DOMAIN, is_a_field_of_this = 0;
   const char *name;
   static char *keywords[] = { "name", "block", "domain", NULL };
-  struct symbol *symbol = NULL;
+  struct symbol *symbol;
   PyObject *block_obj = NULL, *ret_tuple, *sym_obj, *bool_obj;
-  const struct block *block = NULL;
-  volatile struct gdb_exception except;
+  struct block *block = NULL;
 
   if (! PyArg_ParseTupleAndKeywords (args, kw, "s|O!i", keywords, &name,
 				     &block_object_type, &block_obj, &domain))
@@ -382,11 +281,7 @@ gdbpy_lookup_symbol (PyObject *self, PyObject *args, PyObject *kw)
       GDB_PY_HANDLE_EXCEPTION (except);
     }
 
-  TRY_CATCH (except, RETURN_MASK_ALL)
-    {
-      symbol = lookup_symbol (name, block, domain, &is_a_field_of_this);
-    }
-  GDB_PY_HANDLE_EXCEPTION (except);
+  symbol = lookup_symbol (name, block, domain, &is_a_field_of_this);
 
   ret_tuple = PyTuple_New (2);
   if (!ret_tuple)
@@ -408,7 +303,7 @@ gdbpy_lookup_symbol (PyObject *self, PyObject *args, PyObject *kw)
     }
   PyTuple_SET_ITEM (ret_tuple, 0, sym_obj);
 
-  bool_obj = (is_a_field_of_this.type != NULL) ? Py_True : Py_False;
+  bool_obj = is_a_field_of_this? Py_True : Py_False;
   Py_INCREF (bool_obj);
   PyTuple_SET_ITEM (ret_tuple, 1, bool_obj);
 
@@ -424,19 +319,14 @@ gdbpy_lookup_global_symbol (PyObject *self, PyObject *args, PyObject *kw)
   int domain = VAR_DOMAIN;
   const char *name;
   static char *keywords[] = { "name", "domain", NULL };
-  struct symbol *symbol = NULL;
+  struct symbol *symbol;
   PyObject *sym_obj;
-  volatile struct gdb_exception except;
 
   if (! PyArg_ParseTupleAndKeywords (args, kw, "s|i", keywords, &name,
 				     &domain))
     return NULL;
 
-  TRY_CATCH (except, RETURN_MASK_ALL)
-    {
-      symbol = lookup_symbol_global (name, NULL, domain);
-    }
-  GDB_PY_HANDLE_EXCEPTION (except);
+  symbol = lookup_symbol_global (name, NULL, domain);
 
   if (symbol)
     {
@@ -522,8 +412,6 @@ gdbpy_initialize_symbols (void)
 
 
 static PyGetSetDef symbol_object_getset[] = {
-  { "type", sympy_get_type, NULL,
-    "Type of the symbol.", NULL },
   { "symtab", sympy_get_symtab, NULL,
     "Symbol table in which the symbol appears.", NULL },
   { "name", sympy_get_name, NULL,
@@ -544,10 +432,6 @@ to display demangled or mangled names.", NULL },
     "True if the symbol is a function or method." },
   { "is_variable", sympy_is_variable, NULL,
     "True if the symbol is a variable." },
-  { "needs_frame", sympy_needs_frame, NULL,
-    "True if the symbol requires a frame for evaluation." },
-  { "line", sympy_line, NULL,
-    "The source line number at which the symbol was defined." },
   { NULL }  /* Sentinel */
 };
 
@@ -555,14 +439,12 @@ static PyMethodDef symbol_object_methods[] = {
   { "is_valid", sympy_is_valid, METH_NOARGS,
     "is_valid () -> Boolean.\n\
 Return true if this symbol is valid, false if not." },
-  { "value", sympy_value, METH_VARARGS,
-    "value ([frame]) -> gdb.Value\n\
-Return the value of the symbol." },
   {NULL}  /* Sentinel */
 };
 
 PyTypeObject symbol_object_type = {
-  PyVarObject_HEAD_INIT (NULL, 0)
+  PyObject_HEAD_INIT (NULL)
+  0,				  /*ob_size*/
   "gdb.Symbol",			  /*tp_name*/
   sizeof (symbol_object),	  /*tp_basicsize*/
   0,				  /*tp_itemsize*/
