@@ -1,4 +1,4 @@
-# Copyright (C) 2011-2013 Free Software Foundation, Inc.
+# Copyright (C) 2011 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -15,8 +15,8 @@
 
 load_lib gdb-python.exp
 
-standard_testfile
-
+set testfile "py-frame-inline"
+set srcfile ${testfile}.c
 if { [prepare_for_testing ${testfile}.exp ${testfile} ${srcfile}] } {
     return -1
 }
@@ -36,4 +36,4 @@ gdb_test "info frame" "inlined into frame 1\r\n.*"
 
 gdb_test "up" "#1  g .*"
 
-gdb_test "python print (gdb.selected_frame().read_var('l'))" "\r\n42"
+gdb_test "python print gdb.selected_frame().read_var('l')" "\r\n42"
